-singleton으로 가능한 것 변경